Update Pubs, Correct Spellings

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p>I am a Postdoctoral Fellow at the University of Pennsylvania, working within the <a href="https://www.upenn.edu/learninganalytics/index.html", style="color:#462166;">Penn Center for Learning Analytics (PCLA) </a>. I completed my PhD at the University of Colorado under the supervision of <a href="https://www.colorado.edu/ics/sidney-dmello" style="color:#462166;">Sidney D'Mello</a></p>
                 </div>
                 <div class="col-lg-4">
-                    <p>My research is focused on how AI techniques can be used to improve educational software and experiences, with a sepcial focus the fair treatment of students who are members of underrepresented groups </p>
+                    <p>My research is focused on how AI techniques can be used to improve educational software and experiences, with a special focus the fair treatment of students who are members of underrepresented groups </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="img/Hutt_CV_Spring20.pdf" class="btn btn-lg btn-outline">
@@ -145,7 +145,7 @@
 
                         <p>How can AI techniques be used to create a dynamic
                               and improved educational experience? Particularly
-                              when using educational technolgy</p>
+                              when using educational technology</p>
 
                     </div>
                     <div class="col-lg-4">
