--- a/publications.html
+++ b/publications.html
@@ -94,10 +94,24 @@
     <div class="container">
         <div id="article">
             <h1> 2020 </h1>
+            <div class="row cv-item pub">
+                <div class="col-md-3">
+                    <h4 class="inlineifprinted">Dissertation</h4>
+                    <p  class="no-print d-none d-md-block">July</p>
+                </div>
+
+                <div class="col-md-9">
+                    <h2>Scaling Up: Moving Automated Gaze-based Engagement Detection Out of the Lab</h2>
+                    <p><i><b>S. Hutt</b></i><br>
+
+                    </p>
+                </div>
+            </div>
+
               <div class="row cv-item pub">
                   <div class="col-md-3">
                       <h4 class="inlineifprinted">Journal of Research on Adolesence [JRA]</h4>
-                      <p  class="no-print d-none d-md-block">In press</p>
+                      <p  class="no-print d-none d-md-block">March</p>
                   </div>
 
                   <div class="col-md-9">
