--- a/publications.html
+++ b/publications.html
@@ -109,7 +109,7 @@
 				</div>
 
 				<div class="col-md-9">
-					<h2>Scaling Up</h2>
+					<h2>Scaling Up: Moving Automated Gaze-Based Engagement Out of the Lab</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i><b> S. Hutt </b> </i><br>
