Clean up HTML for Pubs

--- a/publications.html
+++ b/publications.html
@@ -94,32 +94,25 @@
     <div class="container">
 		* Denotes Preprint Draft
         <div id="article">
+			
+<!--			Publication Loop-->
+			
 
 			
-			
-
-			
+<!--			New Year-->
 			<h1> 2020 </h1>
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">Dissertation</h4>
 					<p  class="no-print d-none d-md-block">July</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>Scaling Up: Moving Automated Gaze-Based Engagement Out of the Lab</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i><b> S. Hutt </b> </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -135,34 +128,23 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">Journal of Research on Adolesence [JRA]</h4>
 					<p  class="no-print d-none d-md-block">March</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>How does high school extracurricular participation predict bachelor’s degree attainment? it’s complicated</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i>M. Gardner, <b>S. Hutt</b>, A. L. Duckworth, and S. K. D’Mello </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -182,36 +164,26 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
+<!--			New Year-->
 			<h1> 2019 </h1>
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">User Modeling and User-Adapted Interaction [UMUAI]</h4>
 					<p  class="no-print d-none d-md-block">June</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>Automated gaze-based mind wandering detection during computerized learning in classrooms</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i><b>S. Hutt</b>, K. Krasich, C. Mills, N. Bosch, S. White, J. R. Brockmole, and S. K. D’Mello </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -227,34 +199,23 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">American Educational Research Journal [AERJ]</h4>
 					<p  class="no-print d-none d-md-block">May</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>Why high school grades are better predictors of on-time college graduation than are admissions test scores: The role of self- regulation and cognitive ability.</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i>B. M. Galla, E. P. Shulman, B. Plummer, M. Gardner, <b>S. Hutt</b>, J. Goyer, A. Finn, S. D’Mello, and A.L. Duckworth </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -270,34 +231,23 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">International Conference on Educational Data Mining [EDM]</h4>
 					<p  class="no-print d-none d-md-block">Montreal, Canada - July</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>Evaluating fairness and generalizability in models predicting on-time graduation from college applications</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i><b>S. Hutt,</b> M. Gardner, A. L. Duckworth, and S. K. D’Mello </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -317,34 +267,23 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">International Conference on Educational Data Mining [EDM]</h4>
 					<p  class="no-print d-none d-md-block">Montreal, Canada - July</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>Generalizability of sensor-free affect detection models in a longitudinal dataset of tens of thousands of students</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i>E. Jensen, <b>S. Hutt</b>, and S. K. D’Mello </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -364,34 +303,23 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">Conference on Human Factors in Computing Systems [CHI]</h4>
 					<p  class="no-print d-none d-md-block">Glasgow, Scotland UK - May 2019</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>Time to scale: Generalizable affect detection for tens of thousands of students across an entire school year</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i><b>S. Hutt </b>, J. F. Grafsgaard, and S. K. D’Mello </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -407,34 +335,23 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">International Conference on Learning Analytics & Knowledge [LAK]</h4>
 					<p  class="no-print d-none d-md-block">Tempe, AZ, USA - March</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>Language as thought: Using natural language processing to model noncognitive traits that predict college success</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i>C. Stone, A. Quirk, M. Gardener, <b>S. Hutt</b>, A. L. Duckworth, and S. K. D’Mello </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -450,36 +367,26 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
+<!--			New Year-->
 			<h1> 2018 </h1>
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">Journal of Experimental Psychology</h4>
 					<p  class="no-print d-none d-md-block"></p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>Gaze-based signatures of mind wandering during real-world scene processing</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i>K. Krasich, R. McManus, <b>S. Hutt</b>, M. Faber, S. K. D’Mello, and J. R. Brockmole </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -499,34 +406,23 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">International Conference on Artificial Intelligence in Education [AIED]</h4>
 					<p  class="no-print d-none d-md-block">London, UK - June</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>MindTS: Testing a brief mindfulness intervention with an intelligent tutoring system</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i>K. Krasich, <b>S. Hutt</b>, C. Mills, C. A. Spann, J. R. Brockmole, and S. K. D’Mello </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -542,34 +438,23 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">International Conference on Learning Analytics and Knowledge [LAK]</h4>
 					<p  class="no-print d-none d-md-block">Sydney, NSW, Australia - March</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>Prospectively predicting 4-year college graduation from student applications</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i><b>S. Hutt</b>, M. Gardener, D. Kamentz, A. L. Duckworth, and S. K. D’Mello </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -585,36 +470,26 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
+<!--			New Year-->
 			<h1> 2017 </h1>
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">IEEE Frontiers in Education Conference [FIE]</h4>
 					<p  class="no-print d-none d-md-block">Indianapolis, IN, USA - October</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>Placating plato with plates of pasta: An interactive tool for teaching the dining philosophers problem</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i>J. DeBenedetto, <b>S. Hutt</b>, L. Fause, A. Liu, and N. Kremer-Herman </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -634,34 +509,23 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">Conference on User Modeling, Adaptation and Personalization [UMAP]</h4>
 					<p  class="no-print d-none d-md-block">Bratislava, Slovakia - July</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>Out of the fr-eye-ing pan: Towards gaze-based models of attention during learning with technology in the classroom</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i><b>S. Hutt</b>, C. Mills, N. Bosch, K. Krasich, J. Brockmole, and S. D’Mello </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -677,34 +541,23 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">International Conference on Educational Data Mining [EDM]</h4>
 					<p  class="no-print d-none d-md-block">Wuhan, China - July</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>Gaze-based detection of mind wandering during lecture viewing</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i><b>S. Hutt,</b> J. Hardey, R. Bixler, A. Stewart, E. Risko, and S. K. D’Mello </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -724,36 +577,26 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
 
 			
+<!--			New Year-->
 			<h1> 2016 </h1>
 			
-
 			<div class="row cv-item pub">
 				<div class="col-md-3">
 					<h4 class="inlineifprinted">International Conference on Educational Data Mining [EDM]</h4>
 					<p  class="no-print d-none d-md-block">Raleigh, NC, USA - July</p>
 				</div>
-
 				<div class="col-md-9">
 					<h2>The Eyes Have It: Gaze-based Detection of Mind Wandering during Learning with an Intelligent Tutoring System</h2>
 					<div class="row ">
 						<div class="col-md-11">
 						<p><i><b>S. Hutt,</b> C. Mills, S. White, P. J. Donnelly, and S. K. D’Mello </i><br>
 						</p></div>
-
-<!--						<div class="col-md-0.5">-->
-<!--							<a href="img/Hutt_CV_Spring20.pdf" >-->
-<!--								<i class="fa fa-file-pdf-o"></i>-->
-<!--							</a>-->
-<!--						</div>-->
 						<div class="col-md-1">
 							<div class="row">
 								<div class="col-sm-6">
@@ -773,14 +616,10 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
-
 			
 			
-
         </div>
     </div>
 </section>
