--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class = "page-scroll">
-                        <a href="img/Hutt_CV_May21.pdf">Download CV</a>
+                        <a href="img/Hutt_CV_Aug21.pdf">Download CV</a>
                     </li>
                     <li class="page-scroll">
                         <a href="publications.html">Publications</a>
@@ -108,6 +108,36 @@
 			
 			
 <!--			New Year-->
+			<h1> In Press </h1>
+			
+			<div class="row cv-item pub">
+				<div class="col-md-3">
+					<h4 class="inlineifprinted">International Conference on Computers in Education [ICCE]</h4>
+					<p  class="no-print d-none d-md-block"></p>
+				</div>
+				<div class="col-md-9">
+					<h2>Using qualitative data from targeted interviews to inform rapid AIED development</h2>
+					<div class="row ">
+						<div class="col-md-11">
+						<p><i>J. L. Ocumpaugh, <b>S. Hutt</b>, J. M. A. L. Andres, R. S. Baker, G. Biswas, N. Bosch, L. Paquette, and A. Munshi </i><br>
+						</p></div>
+						<div class="col-md-1">
+							<div class="row">
+								<div class="col-sm-6">
+									
+								</div>
+								<div class="col-sm-6">
+									
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			
+			
+<!--			New Year-->
 			<h1> 2021 </h1>
 			
 			<div class="row cv-item pub">
@@ -119,7 +149,7 @@
 					<h2>Who’s stopping you? - using microanalysis to explore the impact of science anxiety on self-regulated learning operations</h2>
 					<div class="row ">
 						<div class="col-md-11">
-						<p><i><b>S. Hutt</b>, J. Ocumpaugh, J. M. A. L. Andres, A. Munshi, N. Bosch, R. S. Baker, Y. Zhang, L. Paquette, S. Slater, and G. Biswas, </i><br>
+						<p><i><b>S. Hutt</b>, J. Ocumpaugh, J. M. A. L. Andres, A. Munshi, N. Bosch, R. S. Baker, Y. Zhang, L. Paquette, S. Slater, and G. Biswas </i><br>
 						</p></div>
 						<div class="col-md-1">
 							<div class="row">
