--- a/publications.html
+++ b/publications.html
@@ -150,14 +150,14 @@
 			
 			<div class="row cv-item pub">
 				<div class="col-md-3">
-					<h4 class="inlineifprinted">IJAIED</h4>
+					<h4 class="inlineifprinted">International Journal of Artifical Intelligence in Education [IJAIED]</h4>
 					<p  class="no-print d-none d-md-block"></p>
 				</div>
 				<div class="col-md-9">
 					<h2>Toward Asset-based Instruction and Assessment in Artificial Intelligence in Education</h2>
 					<div class="row ">
 						<div class="col-md-11">
-						<p><i>J. Ocumpaugh, R. D. Roscoe, R. S. Baker, <b>S. Hutt</b>, and S. J. Aguilar, “ </i><br>
+						<p><i>J. Ocumpaugh, R. D. Roscoe, R. S. Baker, <b>S. Hutt</b>, and S. J. Aguilar </i><br>
 						</p></div>
 						<div class="col-md-1">
 							<div class="row">
